[project]
name = "example"
description = "Example Bug"
version = "0.2.0"
authors = [
    {name = "Keith Stevens"},
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
